# ai-powered-chat-app

./: .env.sample  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yaml  pyproject.toml
.github/workflows/: ci-cd.yaml
docs/: README.md
migrations/models/: 0_20231102145347_init.py
src/: enums.py  main.py  models.py  schemas.py  settings.py  utils.py
tests/: conftest.py  tests.py
